--- a/themes/classic-child/assets/css/custom.css
+++ b/themes/classic-child/assets/css/custom.css
@@ -121,7 +121,6 @@
 
 }
 
-
 /**MAIN**/
 a:hover {
     color: #353535;
@@ -133,12 +132,16 @@ a:hover {
     box-shadow: none;
 }
 
+button:focus {
+    outline: none;
+}
+#footer input:focus{outline: none;}
 body, p {
     color: #353535;
 }
 
-#header .header-nav .right-nav {
-    z-index: 999
+#header .header-nav .right-nav {z-index:8;
+  position: relative;top:-3rem;
 }
 
 /**HOME**/
@@ -148,9 +151,9 @@ body, p {
 
 #index .page-home {
     position: relative;
-    top: -55px;
+    top: -130px;
 }
-
+#index #footer{padding-top: 0}
 #index .page-home img {
 }
 
@@ -190,17 +193,18 @@ body, p {
 
 /**Movie FULL**/
 #header .header-nav .container .header-top #_desktop_logo {
-    padding-top: 3rem;
+    position: relative;top:-3rem;
+
     z-index: 999;
 }
 
 #index .right-nav {
-    padding-top: ;
+
 }
 
 .ls-fullscreen-wrapper {
     z-index: 0;
-    top: -125px;
+    top: -220px;
     width: 100%;
     height: auto;
     float: left;
@@ -212,7 +216,8 @@ body, p {
 }
 
 #index #header .header-top > .container, #index #header .header-nav .right-nav {
-    z-index: 100;
+
+    z-index: 10;
 }
 
 #header .header-top {
@@ -231,13 +236,13 @@ body, p {
 }
 
 #_desktop_user_info, #_desktop_cart {
-    line-height: 45px;
+
     margin-left: 20px;
-    margin-top: 2.95rem;
+    margin-top: 0.8rem;
 }
 
 #_desktop_cart {
-    line-height: 40px;
+
 }
 
 .user-info img {
@@ -249,13 +254,28 @@ body, p {
     background: none;
 }
 
+#header .header-nav .cart-preview.active {
+    background: none;
+}
+
 #header .header-nav .blockcart {
     padding: 0
 }
 
 /**MENU PRINCIPAL**/
-div#adtm_menu_inner {
-    padding-top: 3rem;
+
+#_desktop_top_menu{margin:0 auto;width: 100% !important;z-index: 999;padding-left:0;padding-right: 0;
+padding-top: 3rem;}
+#adtm_menu ul#menu li div.adtm_sub{top:80px;}
+#adtm_menu table.columnWrapTable{width: 1440px;max-width: 100%;margin:0 auto;}
+#header .top-menu a[data-depth="0"]:hover {
+    color: rgba(255, 255, 255, 0.8)
+}
+#adtm_menu .adtm_column span.column_wrap_title, #adtm_menu .adtm_column span.column_wrap_title a{font-weight: 500;letter-spacing: 0.5px;font-size:13px;margin-bottom: 10px;margin-top: 20px;}
+#adtm_menu .adtm_column ul.adtm_elements li, #adtm_menu .adtm_column ul.adtm_elements li a{letter-spacing: 1.5px;font-weight: 400;}
+#adtm_menu div.adtm_column_wrap ul.adtm_elements li{padding-bottom: 8px;}
+div#adtm_menu_inner {width: 795px;margin:0 auto;
+
 }
 
 #adtm_menu .li-niveau1 a.a-niveau1 .advtm_menu_span {
@@ -264,8 +284,8 @@ div#adtm_menu_inner {
     letter-spacing: 2.5px;
 }
 
-#index #adtm_menu .li-niveau1 a.a-niveau1 .advtm_menu_span, #category #adtm_menu .li-niveau1 a.a-niveau1 .advtm_menu_span {
-    color: white;
+#adtm_menu .li-niveau1 a.a-niveau1 .advtm_menu_span {
+
     letter-spacing: 2.5px;
 }
 
@@ -273,11 +293,16 @@ div#adtm_menu_inner {
     margin-top: 0;
 }
 
+.white-menu .li-niveau1 a.a-niveau1 .advtm_menu_span {
+    color: #ffffff !important;
+}
+
 /**FOOTER**/
 
 
 #index #header .menu {
-    top: -225px;
+position: absolute;
+    top:90%;
     height: 50px;
 }
 
@@ -323,7 +348,7 @@ div#adtm_menu_inner {
 .header-top .search-widget form input[type=text] {
     display: none;
 }
-
+#header .header-nav .search-widget{margin-top: 0.9rem;}
 .search-widget form button[type=submit] {
     padding: 0
 }
@@ -333,19 +358,19 @@ div#adtm_menu_inner {
 }
 
 #header .header-top .search-widget {
-    line-height: 135px;
+height:25px;
 }
 
 #wish-block {
-    line-height: 45px;
+
     margin-left: 25px;
-    margin-top: 2.9rem;
+    margin-top: 0.8rem;
 }
 
 .header .cart-products-count {
     padding-left: 1px;
     background: #353535;
-    color: rgba(255,255,255,0.5);
+    color: rgba(255, 255, 255, 0.5);
     font-weight: 600;
     height: 20px;
     width: 20px;
@@ -360,9 +385,25 @@ div#adtm_menu_inner {
 
 /**HOME VOUCHERS**/
 
-.button-pined{background: #ffffff;width:100px;height:30px;position: relative;top:50px;text-align: center;
-    letter-spacing: 0.75px;line-height: 30px;font-size: 13px;text-transform: uppercase;box-shadow: 2px 2px 2px rgba(0,0,0,0.1);}
-.pin-img{position: relative;top:-32px;}
+.button-pined {
+    background: #ffffff;
+    width: 100px;
+    height: 30px;
+    position: relative;
+    top: 50px;
+    text-align: center;
+    letter-spacing: 0.75px;
+    line-height: 30px;
+    font-size: 13px;
+    text-transform: uppercase;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
+}
+
+.pin-img {
+    position: relative;
+    top: -32px;
+}
+
 .pin-img img {
     padding: 2px;
 }
@@ -381,7 +422,11 @@ div#adtm_menu_inner {
     font-style: italic;
     letter-spacing: 1.5px;
 }
-.tittle-home-voucher h4{font-size: 26px;line-height: 35px;}
+
+.tittle-home-voucher h4 {
+    font-size: 26px;
+    line-height: 35px;
+}
 
 .text-pin {
     font-size: 14px;
@@ -460,16 +505,25 @@ h1, h2, h3, h4, h5, h6 {
 /**FEATURED PRODUCTS HOME **/
 .featured-products .products-section-title {
     font-size: 30px;
-   width:100%;display: block;
+    width: 100%;
+    display: block;
     line-height: 40px;
     letter-spacing: 2px;
     font-weight: 400;
 }
 
-#index #products .products,#index .featured-products .products,#index .product-accessories .products,#index .product-miniature .products{display: inline-block}
-#index #products .product-miniature,#index .featured-products .product-miniature, #index .product-accessories .product-miniature, #index .product-miniature .product-miniature{display: inline-block}
+#index #products .products, #index .featured-products .products, #index .product-accessories .products, #index .product-miniature .products {
+    display: inline-block
+}
+
+#index #products .product-miniature, #index .featured-products .product-miniature, #index .product-accessories .product-miniature, #index .product-miniature .product-miniature {
+    display: inline-block
+}
+
 #products .product-price-and-shipping, .featured-products .product-price-and-shipping, .product-accessories .product-price-and-shipping, .product-miniature .product-price-and-shipping {
-    letter-spacing: 1.6px;font-size: 14px;text-transform: uppercase;
+    letter-spacing: 1.6px;
+    font-size: 14px;
+    text-transform: uppercase;
     color: #9bbdaa;
     font-weight: 400;
     text-align: left;
@@ -486,26 +540,73 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .featured-products .product-title a {
+    text-transform: Capitalize;
     font-size: 14px;
-    text-transform: uppercase;
+
+}
+
+#product .product-description p {
+    line-height: 26px;
+}
+
+#product .product-accessories .product-miniature .product-description {
+    width: 250px;
+}
+
+#index #products .product-description, #index .featured-products .product-description, #index .product-accessories .product-description, #index .product-miniature .product-description {
+    width: 250px;
+}
+
+#products .product-description, .featured-products .product-description, .product-miniature .product-description {
+    height: 200px;
+    width: 375px;
+    top: 415px;
+    box-shadow: none;
+    background: #f6f6f6;
+    z-index: 20;
+}
+
+h3.product-title {
+}
+
+#products .product-miniature, .featured-products .product-miniature, .product-accessories .product-miniature, .product-miniature .product-miniature {
+    margin-left: 20px;
+    margin-right: 20px;
+    display: inline-block
+}
+
+#products .thumbnail-container:focus .highlighted-informations,
+#products .thumbnail-container:hover .highlighted-informations,
+.featured-products .thumbnail-container:focus .highlighted-informations,
+.featured-products .thumbnail-container:hover .highlighted-informations,
+.product-accessories .thumbnail-container:focus .highlighted-informations,
+.product-accessories .thumbnail-container:hover .highlighted-informations,
+.product-miniature .thumbnail-container:focus .highlighted-informations,
+.product-miniature .thumbnail-container:hover .highlighted-informations {
+    bottom: 5.5rem;
+    z-index: 30;
+}
+
+#category .products {
+    text-align: center;
 }
 
 #products .thumbnail-container, .featured-products .thumbnail-container, .product-accessories .thumbnail-container, .product-miniature .thumbnail-container {
+    height: 420px;
     box-shadow: none;
+    margin-bottom: 16rem;
 }
 
-#products .product-description, .featured-products .product-description, .product-accessories .product-description, .product-miniature .product-description {
-    height: 120px;
-    top: 280px;
-    box-shadow: none;
-    background: #f6f6f6
+#products .product-miniature .products {
+    display: inline-block;
 }
 
-#products .thumbnail-container, .featured-products .thumbnail-container, .product-accessories .thumbnail-container, .product-miniature .thumbnail-container {
-    height: 395px;
+#products .products {
+    display: block;
 }
 
-#index .featured-products {text-align: center;
+#index .featured-products {
+    text-align: center;
     position: relative;
 }
 
@@ -546,7 +647,13 @@ h1, h2, h3, h4, h5, h6 {
     text-align: center;
     display: block
 }
-
+.up-orange-avis-cat{    height: 9px;
+    width: 162px;
+    background: rgba(243, 190, 154, 0.4);
+    position: relative;
+    top: -8px;
+    display: block;
+    margin: 0 auto;}
 .up-orange {
     height: 9px;
     width: 225px;
@@ -612,6 +719,7 @@ h1, h2, h3, h4, h5, h6 {
     display: inline-block;
     z-index: 10;
     width: 725px;
+    max-width: 100%;
     margin-left: -220px;
     margin-top: 50px;
 }
@@ -653,6 +761,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /**BLOG HOME**/
+#index .prestablog {
+    max-height: 570px;
+}
+
 .up-orange-blog {
     height: 9px;
     width: 187px;
@@ -698,7 +810,7 @@ h1, h2, h3, h4, h5, h6 {
     line-height: 40px;
     text-align: center;
     text-transform: uppercase;
-    letter-spacing: px;
+
 }
 
 #blog_list_1-7 li:hover .block_cont {
@@ -706,7 +818,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #blog_list_1-7 li:hover .block_cont:hover {
-    none;
+
 }
 
 #index .blog_desc {
@@ -730,7 +842,7 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 400;
     line-height: 30px;
     color: #404040;
-    text-transform: center;
+
     line-height: 30px;
     text-align: center;
     letter-spacing: 1.15px;
@@ -754,8 +866,7 @@ h1, h2, h3, h4, h5, h6 {
 #index .blog_list_1-7 {
     max-width: 100%;
     width: 1200px;
-    margin: 0
-    auto:
+    margin: 0 auto;
 }
 
 #blog_list_1-7 {
@@ -841,9 +952,12 @@ h1, h2, h3, h4, h5, h6 {
     display: block;
 }
 
-#product {  background: linear-gradient(180deg, #232323, #000F0F0F);}
+#product {
+    background: linear-gradient(180deg, #232323, #000F0F0F);
+}
 
 .email_subscription #newsletter {
+    z-index: 999;
     background: none;
     border: none;
     text-transform: uppercase;
@@ -854,7 +968,14 @@ h1, h2, h3, h4, h5, h6 {
     margin-left: auto;
     margin-top: 15px;
 }
-.footer-container #newsletter{z-index: 999}
+
+.email_subscription #newsletter:hover {
+    opacity: 0.9
+}
+
+.footer-container #newsletter {
+    z-index: 999
+}
 
 .email_subscription #newsletter input {
     z-index: 999
@@ -987,7 +1108,10 @@ a.social-folone {
 }
 
 @media (min-width: 1200px) {
-    .pinup{height: 750px;}
+    .pinup {
+        height: 750px;
+    }
+
     .container {
         width: 1300px !important;
         max-width: 100%;
@@ -995,7 +1119,7 @@ a.social-folone {
 }
 
 @media (max-width: 1199px) {
-    #header .header-nav {
+    #index #header .header-nav {
         max-height: 50px;
     }
 }
@@ -1006,10 +1130,53 @@ a.social-folone {
     padding-left: 25px;
     font-size: 12px;
 }
-.catdef{text-align: left;text-transform: uppercase}
+
+.catdef {
+    text-align: left;
+    text-transform: uppercase;
+    padding-left: 20px;
+    font-weight: 600;
+    color: #000000;
+    padding-top: 20px;
+}
+
+/**TEMPORAIRE**/
+.decli-list {
+    width: 100%;
+    padding-top: 45px;
+    font-weight: 400;
+    font-size: 12px;
+    letter-spacing: 0.35px;
+    color: #353535
+}
+
+#index .autresdecli {
+    width: 73%
+}
+
+#index .defaultdecli {
+    padding-left: 20px;
+    width: 25%
+}
+
+.defaultdecli {
+    text-align: left;
+    display: inline-block;
+    width: 49%;
+    padding-left: 35px;
+}
+
+.autresdecli {
+    text-align: right;
+    display: inline-block;
+    width: 49%;
+    padding-right: 10px;
+}
+
+/** FINTEMPORAIRE**/
 .product-flags li.product-flag.discount, .product-flags li.product-flag.discount-amount, .product-flags li.product-flag.discount-percentage {
     font-weight: 400;
-    background #index .
+
     page-home: #F3BE9A;
     font-size: 14px;
     line-height: 19px;
@@ -1018,7 +1185,22 @@ a.social-folone {
 
 
 /**PRODUCT LIST HEADER**/
-#category #cat-reup{position:relative;top:-200px;}
+#products .product-title a, .featured-products .product-title a, .product-accessories .product-title a, .product-miniature .product-title a {
+    color: #353535;
+    font-size: 14px;
+    line-height: 17px;
+    letter-spacing: 1.75px;
+}
+
+#category #content-wrapper {
+    margin-top: 50px;
+}
+
+#category #cat-reup {
+    position: relative;
+    top: -330px;
+}
+
 #category .ls-fullscreen-wrapper {
     top: -190px;
     min-height: 500px;
@@ -1026,15 +1208,43 @@ a.social-folone {
 
 #products .product-title, .featured-products .product-title, .product-accessories .product-title, .product-miniature .product-title {
     text-align: left;
-    padding-left: 20px
+    padding-left: 20px;
+    text-transform: capitalize;
+    margin-top: 0;
 }
 
+.custom-filters {
+    background: #9bbdaa !important;
+    color: #ffffff;
+    font-size: 12px;
+    font-weight: 500;
+    text-transform: uppercase;
+    letter-spacing: 1.6px;
+    line-height: 44px !important
+}
+
+.custom-filters:hover {
+    opacity: 0.9;
+    cursor: pointer
+}
+
+.filterscat {
+    width: 22px;
+    position: relative;
+    left: -10px;
+    top: -2px
+}
 
 .block-category h1, .block-category .block-category-inner #category-description p {
     color: #FFFFFF !important;
 }
 
+#category .block-categories .category-sub-menu li:not([data-depth="0"]):not([data-depth="1"]):before {
+    content: '';
+}
+.block-category{}
 .block-category h1 {
+
     font-size: 30px;
     font-weight: 500;
     letter-spacing: 2px;
@@ -1061,13 +1271,13 @@ a.social-folone {
     margin: 0 auto;
     text-align: center;
     color: #ffffff;
-    z-index: 999;
+    z-index: 99;
     height: 100px;
     top: -32rem;
 }
 
 .block-categories .category-sub-menu li[data-depth="0"] > a {
-    width: 200px;
+    min-width: 200px;
     color: #ffffff;
     text-transform: uppercase;
     font-size: 12px;
@@ -1079,7 +1289,7 @@ a.social-folone {
 
 .block-categories .category-sub-menu li {
     display: inline-block;
-    width: 200px;
+    min-width: 200px;padding-left:0.5rem;padding-right: 0.5rem;
     border: 1px solid rgba(255, 255, 255, 0.6);
     background: rgba(0, 0, 0, 0.3);
     text-align: center;
@@ -1111,9 +1321,16 @@ a.social-folone {
 #products .highlighted-informations, .featured-products .highlighted-informations, .product-accessories .highlighted-informations, .product-miniature .highlighted-informations {
     background: none;
     box-shadow: none;
+    width: 375px;
+    bottom:-2.5rem;
+}
+.product-miniature .highlighted-informations{bottom: -0.75rem;}
+#index .product-miniature .highlighted-informations, .product-accessories .product-miniature .highlighted-informations {
+    width: 250px;
 }
 
 .quick-wish-block {
+    text-align: center;
     background: #353535;
     width: 45px;
     height: 45px;
@@ -1131,16 +1348,41 @@ a.social-folone {
     border-radius: 45px;
 }
 
+.prod-list{margin-top: 80px;}
+
 .product-flags {
-    left: 199px;
+
 }
 
+
+#category #products .thumbnail-container {
+    width: 375px;
+}
+
+
+.avis-category{text-align: center;color:#353535}
+.avis-category img{width: 25px;height:25px;padding:3px;}
+.avis{font-weight: 400;font-size: 40px;letter-spacing: 2.5px;line-height: 46px;}
+.auteur-avis{font-size: 18px;font-weight: 400;letter-spacing: 1.6px;line-height: 24px;margin-top:1.5rem;}
+
+.lienavisproduit{font: 12px;font: 300;letter-spacing: 1.63px;color:#353535;text-transform: uppercase;margin-top:1rem;}
+
 /**PRODUCT TPL **/
+#product #header .header-nav {
+    max-height: inherit;
+    margin-bottom: 0;
+    min-height: 120px;
+}
+
+#product {
+    background: linear-gradient(180deg, #F3F1EC, #FFFFFF);
+}
+
 .product-cover img {
     box-shadow: none;
 }
 
-#header .header-nav {
+#index #header .header-nav {
     max-height: 130px;
     padding-bottom: 0;
 }
@@ -1154,8 +1396,47 @@ a.social-folone {
 }
 
 #products .thumbnail-container:focus .highlighted-informations.no-variants, #products .thumbnail-container:hover .highlighted-informations.no-variants, .featured-products .thumbnail-container:focus .highlighted-informations.no-variants, .featured-products .thumbnail-container:hover .highlighted-informations.no-variants, .product-accessories .thumbnail-container:focus .highlighted-informations.no-variants, .product-accessories .thumbnail-container:hover .highlighted-informations.no-variants, .product-miniature .thumbnail-container:focus .highlighted-informations.no-variants, .product-miniature .thumbnail-container:hover .highlighted-informations.no-variants {
-    bottom: 6rem;
+    bottom: -.75rem;
 }
+
+#product h1 {
+    font-weight: 500;
+    color: #454545
+}
+
+#product .product-price {
+    color: #454545;
+    font-size: 24px;
+    line-height: 32px;
+    letter-spacing: 2px;
+    font-weight: 400
+}
+
+.product-images > li.thumb-container {
+    display: inline-block
+}
+
+
+#product .tabs {
+    font-size: 30px;
+    font-weight: 400;
+    letter-spacing: 2px;
+    color: #353535;
+    text-align: center;
+    background: none;
+    box-shadow: none;
+}
+
+#products .thumbnail-container:focus .product-description:after, #products .thumbnail-container:hover .product-description:after, .featured-products .thumbnail-container:focus .product-description:after, .featured-products .thumbnail-container:hover .product-description:after, .product-accessories .thumbnail-container:focus .product-description:after, .product-accessories .thumbnail-container:hover .product-description:after, .product-miniature .thumbnail-container:focus .product-description:after, .product-miniature .thumbnail-container:hover .product-description:after {
+    border: none;
+}
+
+
+.top-description-img {
+    width: 75px;
+    margin: 0 auto;
+}
+
 
 /** BREADCRUMB **/
 #wrapper .breadcrumb {
@@ -1163,3 +1444,33 @@ a.social-folone {
     letter-spacing: 1.85px;
 }
 
+
+/**INFINITE SCROLL **/
+.vss-more-products {
+    background: #939288;
+    color: #ffffff;
+    text-transform: uppercase;
+    font-weight: 400;
+    line-height: 16px;
+    letter-spacing: 1.6px;
+    width: 320px;
+    font-family: 'Brandon';
+    margin: 0 auto;
+}
+
+.vss-more-products div {
+    font-size: 12px;
+    display: inline-block;
+    position: relative;
+    top: 2px;
+}
+
+.cross-more {
+    width: 23px;
+    display: inline-block;
+    margin-right: 1rem;
+}
+
+.message-box {
+    border: none
+}
